@@ -1,3 +1,4 @@
+// Spring Security için özel UserDetailsService implementasyonu. Kullanıcıyı email ile bulur.
 package com.GoDo.user_api.service;
 
 import com.GoDo.user_api.model.User;
@@ -8,28 +9,31 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.Optional;
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
 
     private final UserRepository userRepository;
 
+    // Constructor, repository bağımlılığını enjekte eder
     public CustomUserDetailsService(UserRepository userRepository) {
         this.userRepository = userRepository;
     }
 
+    // Email ile kullanıcıyı bulup UserDetails nesnesi döndürür
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
         // Kullanıcıyı veritabanından email ile bul
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + email));
+        Optional<User> userOpt = userRepository.findByEmail(email);
+        User user = userOpt.orElseThrow(() -> new UsernameNotFoundException("Kullanıcı bulunamadı: " + email));
 
         // Spring Security'nin kendi UserDetails nesnesini oluştur ve döndür
         return new org.springframework.security.core.userdetails.User(
             user.getEmail(),
             user.getPassword(),
-            Collections.singletonList(new SimpleGrantedAuthority(user.getRole()))
+            List.of(new SimpleGrantedAuthority(user.getRole()))
         );
     }
 }
